<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TAAP</string>
    <string name="action_settings">Settings</string>
    <string name="greet">Greet</string>
    <string name="search">Search</string>
    <string name="sort_drills">Sort Drills</string>
    <string name="log">Log</string>
    <string name="taap">TAAP</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="icon_sort_button">icon sort button</string>
    <string name="icon_search_button">icon search button</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="rate_me_in_the_app_store">Rate me in the App Store</string>
    <string name="see_more_from_the_developer">See more from the developer</string>
    <string name="software_licenses">Software Licenses</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="clear_data">Clear Data</string>
    <string name="legal">Legal</string>
    <string name="app_info">App Info</string>
    <string name="version">Version</string>
    <string name="version_number">1.0.0</string>
    <string name="title_activity_settings_detail">SettingsDetailActivity</string>
    <string name="settingsdetailactivity">SettingsDetailActivity</string>
    <string name="please_enter_drill">Please Enter Drill</string>
    <string name="icon_chevron_right">icon chevron right</string>

    <string-array name="drill_types">
        <item>Sort Drills (All)</item>
        <item>Fundamentals</item>
        <item>Defense</item>
        <item>Driving</item>
        <item>Conditioning</item>
        <item>Passing</item>
        <item>Shooting</item>
        <item>Ball Handling</item>
    </string-array>

    <string name="title_activity_drill_detail">DrillDetailActivity</string>
    <string name="drilldetailactivity">DrillDetailActivity</string>
    <string name="drill_image">drill image</string>
    <string name="drill_image_icon">drill image icon</string>
    <string name="goals">Goals</string>
    <string name="sets_left">Sets Left</string>
    <string name="reps">Reps</string>
    <string name="finished">Finished</string>
    <string name="successes">Successes</string>
    <string name="icon_session_log_timer_detail">icon session log timer detail</string>
    <string name="session_date">Session Date</string>
    <string name="session_length">Session Length</string>
    <string name="session_goal">Session Goal</string>
    <string name="active_work">Active Work</string>
    <string name="rest_time">Rest Time</string>
    <string name="sets_completed">Sets Completed</string>
    <string name="reps_completed">Reps Completed</string>
    <string name="success_rate">Success Rate</string>
    <string name="success_record">Success Record</string>
    <string name="icon_header_trending_upward">icon header trending upward</string>
    <string name="continue_string">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="session_history">Session History</string>
    <string name="total_session_time">Total Session Time</string>
    <string name="today_s_date">## Today\'s Date ##</string>
    <string name="icon_goals_met_trophy">icon goals met trophy</string>
    <string name="fundamentals">Fundamentals</string>
    <string name="zero_time">00:00:00</string>
    <string name="zero">0</string>
    <string name="goals_met">Goals Met</string>
    <string name="total_active_time">Total Active Time</string>
    <string name="total_rest_time">Total Rest Time</string>
    <string name="exercises_completed">Exercises Completed</string>
    <string name="defense">Defense</string>
    <string name="offense">Offense</string>
    <string name="conditioning">Conditioning</string>
    <string name="shooting">Shooting</string>
    <string name="ball_handling">Ball Handling</string>
    <string name="invalid_successes">Invalid Successes (Must be less than Reps)</string>
    <string name="yes">Yes</string>
    <string name="clear_data_message">Are you want to clear your logs. This action cannot be undone!</string>
    <string name="none">None</string>
    <string name="rest_time_started">Rest Time Started</string>
    <string name="current_log">Current Log</string>
    <string name="previous_logs">Previous Logs</string>
</resources>
