<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/content_main">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_compare_arrows_white_24dp"
        android:contentDescription="@string/icon_sort_button" />

    <Spinner
        android:id="@+id/spDrillsSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:prompt="@string/sort_drills"
        android:spinnerMode="dropdown" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_search_white_24dp"
        android:contentDescription="@string/icon_search_button" />
</LinearLayout>