<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/card_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:showIn="@layout/content_log">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:contentDescription="@string/icon_goals_met_trophy"
        android:padding="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_whatshot_white_24dp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/total_session_time"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSuccessRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fundamentals"
        android:textColor="@android:color/white"
        android:textSize="@dimen/log_header_size" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fundamentals"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/log_header_size" />
</LinearLayout>