<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goalsMetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:showIn="@layout/content_log">

    <ImageView
        android:id="@+id/ivGoalsMet"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="0.45"
        android:contentDescription="@string/icon_goals_met_trophy"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/ic_trophy_variant_outline_white_48dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        android:layout_weight="0.55"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGoalsMet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:gravity="center_horizontal|start"
            android:text="@string/zero"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/headerGoalsMet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|start"
            android:text="@string/goals_met"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/log_header_size" />
    </LinearLayout>
</LinearLayout>