<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.armandgray.taap.settings.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="100dp"
        android:orientation="vertical">

        <View
            android:id="@+id/firstTopBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tvRateThisApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_item_background"
            android:drawableEnd="@drawable/ic_chevron_right_gray_24dp"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/about_text_padding_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/about_text_padding_vertical"
            android:text="@string/rate_me_in_the_app_store"
            android:textSize="@dimen/settings_text_size" />

        <TextView
            android:id="@+id/tvSeeMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_item_background"
            android:drawableEnd="@drawable/ic_chevron_right_gray_24dp"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/about_text_padding_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/about_text_padding_vertical"
            android:text="@string/see_more_from_the_developer"
            android:textSize="@dimen/settings_text_size" />

        <TextView
            android:id="@+id/tvClearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_item_background"
            android:drawableEnd="@drawable/ic_chevron_right_gray_24dp"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/about_text_padding_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/about_text_padding_vertical"
            android:text="@string/clear_data"
            android:textSize="@dimen/settings_text_size" />


        <TextView
            android:id="@+id/tvLegalHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/header_top_padding"

            android:popupBackground="#333333"
            android:text="@string/legal"
            android:textAllCaps="true" />

        <View
            android:id="@+id/secondTopBorder"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <TextView
            android:id="@+id/tvTermsConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_item_background"
            android:drawableEnd="@drawable/ic_chevron_right_gray_24dp"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/about_text_padding_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/about_text_padding_vertical"
            android:text="@string/terms_conditions"
            android:textSize="@dimen/settings_text_size" />

        <TextView
            android:id="@+id/tvSoftwareLicenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_item_background"
            android:drawableEnd="@drawable/ic_chevron_right_gray_24dp"
            android:drawableRight="@drawable/ic_chevron_right_gray_24dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/about_text_padding_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/about_text_padding_vertical"
            android:text="@string/software_licenses"
            android:textSize="@dimen/settings_text_size" />

        <TextView
            android:id="@+id/tvAppInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/header_top_padding"
            android:popupBackground="#333333"
            android:text="@string/app_info"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/tvVersionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/version"
            android:textColor="@color/colorDarkGray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVersionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/version_number" />
    </LinearLayout>
</ScrollView>
